// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`playlist(master-fmp4.m3u8) 1`] = `
{
  "independentSegments": true,
  "isMasterPlaylist": true,
  "variants": [
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 2215219,
      "codecs": "avc1.640020,mp4a.40.2",
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v4/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 7976430,
      "codecs": "avc1.64002a,mp4a.40.2",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v8/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 6181885,
      "codecs": "avc1.64002a,mp4a.40.2",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v7/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 4682666,
      "codecs": "avc1.64002a,mp4a.40.2",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v6/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 3170746,
      "codecs": "avc1.640020,mp4a.40.2",
      "resolution": {
        "height": 720,
        "width": 1280,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v5/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 1276223,
      "codecs": "avc1.64001e,mp4a.40.2",
      "resolution": {
        "height": 432,
        "width": 768,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v3/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 904744,
      "codecs": "avc1.64001e,mp4a.40.2",
      "resolution": {
        "height": 360,
        "width": 640,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud1",
          "name": "English",
          "type": "AUDIO",
          "uri": "a1/prog_index.m3u8",
        },
      ],
      "bandwidth": 538201,
      "codecs": "avc1.640015,mp4a.40.2",
      "resolution": {
        "height": 270,
        "width": 480,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v1/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 2440329,
      "codecs": "avc1.640020,ac-3",
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v4/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 8201540,
      "codecs": "avc1.64002a,ac-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v8/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 6406995,
      "codecs": "avc1.64002a,ac-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v7/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 4907776,
      "codecs": "avc1.64002a,ac-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v6/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 3395856,
      "codecs": "avc1.640020,ac-3",
      "resolution": {
        "height": 720,
        "width": 1280,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v5/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 1501333,
      "codecs": "avc1.64001e,ac-3",
      "resolution": {
        "height": 432,
        "width": 768,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v3/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 1129854,
      "codecs": "avc1.64001e,ac-3",
      "resolution": {
        "height": 360,
        "width": 640,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud2",
          "name": "English",
          "type": "AUDIO",
          "uri": "a2/prog_index.m3u8",
        },
      ],
      "bandwidth": 763311,
      "codecs": "avc1.640015,ac-3",
      "resolution": {
        "height": 270,
        "width": 480,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v1/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 2248329,
      "codecs": "avc1.640020,ec-3",
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v4/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 8009540,
      "codecs": "avc1.64002a,ec-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v8/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 6214995,
      "codecs": "avc1.64002a,ec-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v7/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 4715776,
      "codecs": "avc1.64002a,ec-3",
      "resolution": {
        "height": 1080,
        "width": 1920,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v6/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 3203856,
      "codecs": "avc1.640020,ec-3",
      "resolution": {
        "height": 720,
        "width": 1280,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v5/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 1309333,
      "codecs": "avc1.64001e,ec-3",
      "resolution": {
        "height": 432,
        "width": 768,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v3/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 937854,
      "codecs": "avc1.64001e,ec-3",
      "resolution": {
        "height": 360,
        "width": 640,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "aud3",
          "name": "English",
          "type": "AUDIO",
          "uri": "a3/prog_index.m3u8",
        },
      ],
      "bandwidth": 571311,
      "codecs": "avc1.640015,ec-3",
      "resolution": {
        "height": 270,
        "width": 480,
      },
      "subtitles": [
        {
          "groupId": "sub1",
          "name": "English",
          "type": "SUBTITLES",
          "uri": "s1/eng/prog_index.m3u8",
        },
      ],
      "uri": "v1/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlist(master-multipleAudioGroups.m3u8) 1`] = `
{
  "independentSegments": false,
  "isMasterPlaylist": true,
  "variants": [
    {
      "audio": [
        {
          "groupId": "audio-lo",
          "name": "English",
          "type": "AUDIO",
          "uri": "englo/prog_index.m3u8",
        },
        {
          "groupId": "audio-lo",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "groupId": "audio-lo",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 195023,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "audio-lo",
          "name": "English",
          "type": "AUDIO",
          "uri": "englo/prog_index.m3u8",
        },
        {
          "groupId": "audio-lo",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "groupId": "audio-lo",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 260000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "audio-hi",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 591680,
      "codecs": "mp4a.40.2, avc1.64001e",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "audio-hi",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 650000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi2/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlist(master-multipleAudioGroupsCombined.m3u8) 1`] = `
{
  "independentSegments": false,
  "isMasterPlaylist": true,
  "variants": [
    {
      "audio": [
        {
          "groupId": "audio-lo",
          "name": "English",
          "type": "AUDIO",
          "uri": undefined,
        },
        {
          "groupId": "audio-lo",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "groupId": "audio-lo",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 195023,
      "codecs": "mp4a.40.5",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "audio-lo",
          "name": "English",
          "type": "AUDIO",
          "uri": undefined,
        },
        {
          "groupId": "audio-lo",
          "name": "Français",
          "type": "AUDIO",
          "uri": "frelo/prog_index.m3u8",
        },
        {
          "groupId": "audio-lo",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "splo/prog_index.m3u8",
        },
      ],
      "bandwidth": 260000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "lo2/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "audio-hi",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 591680,
      "codecs": "mp4a.40.2, avc1.64001e",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi/prog_index.m3u8",
    },
    {
      "audio": [
        {
          "groupId": "audio-hi",
          "name": "English",
          "type": "AUDIO",
          "uri": "eng/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Français",
          "type": "AUDIO",
          "uri": "fre/prog_index.m3u8",
        },
        {
          "groupId": "audio-hi",
          "name": "Espanol",
          "type": "AUDIO",
          "uri": "sp/prog_index.m3u8",
        },
      ],
      "bandwidth": 650000,
      "codecs": "avc1.42e01e,mp4a.40.2",
      "resolution": undefined,
      "subtitles": [],
      "uri": "hi2/prog_index.m3u8",
    },
  ],
}
`;

exports[`playlist(master-simple.m3u8) 1`] = `
{
  "independentSegments": false,
  "isMasterPlaylist": true,
  "variants": [
    {
      "audio": [],
      "bandwidth": 240000,
      "codecs": undefined,
      "resolution": {
        "height": 224,
        "width": 396,
      },
      "subtitles": [],
      "uri": "media.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 40000,
      "codecs": undefined,
      "resolution": undefined,
      "subtitles": [],
      "uri": "media1.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 440000,
      "codecs": undefined,
      "resolution": {
        "height": 224,
        "width": 396,
      },
      "subtitles": [],
      "uri": "media2.m3u8",
    },
    {
      "audio": [],
      "bandwidth": 1928000,
      "codecs": undefined,
      "resolution": {
        "height": 540,
        "width": 960,
      },
      "subtitles": [],
      "uri": "media3.m3u8",
    },
  ],
}
`;

exports[`playlist(media-dateTime.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "isMasterPlaylist": false,
  "mediaSequenceBase": 0,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "hls_450k_video.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": "2016-06-22T15:20:26.166+02:00",
      "uri": "hls_450k_video.ts",
    },
  ],
  "targetDuration": 10,
}
`;

exports[`playlist(media-fmp4.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": true,
  "isMasterPlaylist": false,
  "mediaSequenceBase": 1,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 6.006,
      "map": {
        "uri": "main.mp4",
      },
      "programDateTime": undefined,
      "uri": "main.mp4",
    },
    {
      "discontinuity": undefined,
      "duration": 6.006,
      "map": {
        "uri": "main.mp4",
      },
      "programDateTime": undefined,
      "uri": "main.mp4",
    },
  ],
  "targetDuration": 6,
}
`;

exports[`playlist(media-interstitials.m3u8) 1`] = `
{
  "dateRanges": [
    {
      "classId": "com.apple.hls.interstitial",
      "clientAttributes": {
        "ASSET-LIST": "http://localhost:52002/session/b41fa084-fad0-47f7-af9e-7f03c2e81edb/asset-list.json?startDate",
        "RESTRICT": "SKIP,JUMP",
        "RESUME-OFFSET": 0,
      },
      "id": "i0",
      "startDate": "2024-10-07T19:17:00.207+02:00",
    },
    {
      "classId": "com.apple.hls.interstitial",
      "clientAttributes": {
        "ASSET-LIST": "http://localhost:52002/session/b41fa084-fad0-47f7-af9e-7f03c2e81edb/asset-list.json?startDate",
        "RESTRICT": "SKIP,JUMP",
        "RESUME-OFFSET": 0,
      },
      "id": "i1",
      "startDate": "2024-10-07T19:17:10.207+02:00",
    },
  ],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "isMasterPlaylist": false,
  "mediaSequenceBase": undefined,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "1.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "2.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "3.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "4.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 4,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "5.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 5.833,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "6.m4s",
    },
    {
      "discontinuity": undefined,
      "duration": 3.792,
      "map": {
        "uri": "init.mp4",
      },
      "programDateTime": undefined,
      "uri": "7.m4s",
    },
  ],
  "targetDuration": 6,
}
`;

exports[`playlist(media-mediaSequence.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "isMasterPlaylist": false,
  "mediaSequenceBase": 0,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 6.64,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/8a5e2822668b5370f4eb1438b2564fb7ab12ffe1-hi720.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 6.08,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/56be1cef869a1c0cc8e38864ad1add17d187f051-hi720.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 6.6,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/549c8c77f55f049741a06596e5c1e01dacaa46d0-hi720.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 5,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "/test/ts-files/tvy7/6cfa378684ffeb1c455a64dae6c103290a1f53d4-hi720.ts",
    },
  ],
  "targetDuration": 8,
}
`;

exports[`playlist(media-simple.m3u8) 1`] = `
{
  "dateRanges": [],
  "discontinuitySequenceBase": undefined,
  "endlist": true,
  "independentSegments": false,
  "isMasterPlaylist": false,
  "mediaSequenceBase": undefined,
  "playlistType": "VOD",
  "segments": [
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00001.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00002.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00003.ts",
    },
    {
      "discontinuity": undefined,
      "duration": 10,
      "map": undefined,
      "programDateTime": undefined,
      "uri": "media-00004.ts",
    },
  ],
  "targetDuration": 10,
}
`;
